Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18770

[REGEDIT] .reg files do not show the confirmation messagebox anymore since last winesync

    XMLWordPrintable

Details

    Description

      Since winesync commit https://git.reactos.org/?p=reactos.git;a=commitdiff;h=36a7f0dc7c10a9cf7c137ed617a0d419999a02f9 .reg files cannot be imported anymore either by double click / contextual menu / invoking directly from console the file name (this does not affect the reg command, only to regedit)

      reproduction steps: double click any .reg file from explorer or by invoking in console [filename].reg

      Expected results: you should see a message box asking confirmation (string loaded from IDS_IMPORT_PROMPT)

      Current result: regedit dies silently without importing .reg file content (in fact IDS_IMPORT_PROMPT is not used in the new code)

      Attachments

        Activity

          People

            ThFabba ThFabba
            Julcar Julcar
            Votes:
            4 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: