[REGEDIT] Add back import prompt message lost during Wine sync. CORE-18770